J21 API usage update